--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -13,16 +13,17 @@ Purchase: http://themeforest.net/item/metronic-responsive-admin-dashboard-templa
 <!--<![endif]-->
 <!-- BEGIN HEAD -->
 <head>
-<meta charset="utf-8"/>
-<title><%= current_page.data.title || "Nitrogen" %></title>
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<meta content="" name="description"/>
-<meta content="" name="author"/>
-<meta name="MobileOptimized" content="320">
+  <meta charset="utf-8"/>
+  <title><%= current_page.data.title || "Nitrogen" %></title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+  <meta content="" name="description"/>
+  <meta content="" name="author"/>
+  <meta name="MobileOptimized" content="320">
 
-<%= stylesheet_link_tag "all" %>
+  <%= stylesheet_link_tag "all" %>
 
+  <link type="image/ico" href="images/favicon.ico" rel="icon" />
 </head>
 
 <body class="page-header-fixed page-boxed">
