add in concepts, making pointer work for docs section

--- a/source/layouts/docs.erb
+++ b/source/layouts/docs.erb
@@ -29,10 +29,8 @@
             <span class="title">
                CONCEPTS
             </span>
-            <span class="selected">
-            </span>
-            <span class="arrow open">
-            </span>
+            <span id="conceptsSelected"></span>
+            <span id="conceptsArrow"></span>
             </a>
             <ul class="sub-menu">
               <li>
@@ -47,33 +45,20 @@
               </li>
               <li>
                 <a href="/docs/concepts/service.html">
-                  Services
+                  Services & Sessions
                 </a>
               </li>
               <li>
-                <a href="/docs/concepts/session.html">
-                  Sessions
-                </a>
-              </li>
-              <li>
-                <a href="/docs/concepts/permission.html">
+                <a href="/docs/concepts/permissions.html">
                   Permissions
                 </a>
               </li>
               <li>
-                <a href="/docs/concepts/commandManager.html">
+                <a href="/docs/concepts/commands.html">
                   Commands
                 </a>
               </li>
-              <!--
-              <li>
-                <a href="/docs/nitrogen/device.html">
-                  Reactor
-                </a>
-              </li>
-            -->
             </ul>
-
           <li class="active">
             <a href="javascript:;">
             <i class="fa fa-cogs"></i>
@@ -81,10 +66,8 @@
             <span class="title">
                CLIENT LIBRARY
             </span>
-            <span class="selected">
-            </span>
-            <span class="arrow open">
-            </span>
+            <span id="nitrogenSelected"></span>
+            <span id="nitrogenArrow"></span>
             </a>
             <ul class="sub-menu">
               <li>
