use google to search site

--- a/source/layouts/docs.erb
+++ b/source/layouts/docs.erb
@@ -12,11 +12,11 @@
             <!-- BEGIN SIDEBAR TOGGLER BUTTON -->
           </li>
           <li class="sidebar-search-wrapper">
-            <form class="sidebar-search" action="extra_search.html" method="POST">
+            <form class="sidebar-search" action="#" id='searchForm'>
               <div class="form-container">
                 <div class="input-box">
                   <a href="javascript:;" class="remove"></a>
-                  <input type="text" placeholder="Search..."/>
+                  <input id='query' type="text" placeholder="Search..."/>
                   <input type="button" class="submit" value=" "/>
                 </div>
               </div>
