--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -53,7 +53,7 @@ Purchase: http://themeforest.net/item/metronic-responsive-admin-dashboard-templa
       </li>
     -->
       <li id="docsNavbar">
-        <a href="/docs">Documentation</a>
+        <a href="docs/nitrogen/index.html">Documentation</a>
       </li>
       <li>
         <a data-toggle="dropdown" data-hover="dropdown" data-close-others="true" class="dropdown-toggle" href="javascript:;">
