add contact info

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -96,12 +96,15 @@ Purchase: http://themeforest.net/item/metronic-responsive-admin-dashboard-templa
           </li>
         </ul>
       </li>
+      <li id="docsNavbar">
+        <a href="mailto:timfpark@gmail.com">Contact</a>
+      </li>
     </ul>
   </div>
     <div class="hor-menu pull-right">
     <ul class="nav navbar-nav">
       <li>
-        <a href="#">Hosted Service Admin</a>
+        <a href="#">Hosted Service</a>
       </li>
     </ul>
   </div>
@@ -146,7 +149,7 @@ Purchase: http://themeforest.net/item/metronic-responsive-admin-dashboard-templa
   </div>
   <!-- END CONTAINER -->
 
-  <!-- BEGIN FOOTER -->
+  <!-- BEGIN FOOTER
   <div class="footer">
     <div class="footer-inner">
        Copyright <%= Time.now.strftime("%Y") %> Nitrogen
