more text revisions in concepts

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -94,6 +94,13 @@ Purchase: http://themeforest.net/item/metronic-responsive-admin-dashboard-templa
               Devices
             </a>
           </li>
+
+          <li>
+            <a href="http://github.com/nitrogenjs/website">
+              Project Website
+            </a>
+          </li>
+
         </ul>
       </li>
       <li id="docsNavbar">
