add schemas, devices, and command manager documentation

--- a/source/layouts/docs.erb
+++ b/source/layouts/docs.erb
@@ -22,7 +22,7 @@
               </div>
             </form>
           </li>
-          <li class="active">
+          <li id="conceptsTree">
             <a href="javascript:;">
             <i class="fa fa-lightbulb-o"></i>
 
@@ -59,15 +59,16 @@
                 </a>
               </li>
             </ul>
-          <li class="active">
+          </li>
+          <li id='clientLibraryTree'>
             <a href="javascript:;">
             <i class="fa fa-cogs"></i>
 
             <span class="title">
                CLIENT LIBRARY
             </span>
-            <span id="nitrogenSelected"></span>
-            <span id="nitrogenArrow"></span>
+            <span id="clientLibrarySelected"></span>
+            <span id="clientLibraryArrow"></span>
             </a>
             <ul class="sub-menu">
               <li>
@@ -112,6 +113,88 @@
               </li>
             </ul>
           </li>
+          <li id="schemasTree">
+            <a href="javascript:;">
+            <i class="fa fa-cogs"></i>
+
+            <span class="title">
+               MESSAGE SCHEMAS
+            </span>
+            <span id="schemasSelected"></span>
+            <span id="schemasArrow"></span>
+            </a>
+            <ul class="sub-menu">
+              <li>
+                <a href="/docs/schemas/cameraCommand.html">
+                  cameraCommand
+                </a>
+              </li>
+              <li>
+                <a href="/docs/schemas/claim.html">
+                  claim
+                </a>
+              </li>
+              <li>
+                <a href="/docs/schemas/heartbeat.html">
+                  heartbeat
+                </a>
+              </li>
+              <li>
+                <a href="/docs/schemas/image.html">
+                  image
+                </a>
+              </li>
+              <li>
+                <a href="/docs/schemas/ip.html">
+                  ip
+                </a>
+              </li>
+              <li>
+                <a href="/docs/schemas/log.html">
+                  log
+                </a>
+              </li>
+            </ul>
+          </li>
+
+          <li id="devicesTree">
+            <a href="javascript:;">
+            <i class="fa fa-cogs"></i>
+
+            <span class="title">
+               DEVICES
+            </span>
+            <span id="devicesSelected"></span>
+            <span id="devicesArrow"></span>
+            </a>
+            <ul class="sub-menu">
+              <li>
+                <a href="/docs/devices/camera.html">
+                  camera
+                </a>
+              </li>
+            </ul>
+          </li>
+
+          <li id="managersTree">
+            <a href="javascript:;">
+            <i class="fa fa-cogs"></i>
+
+            <span class="title">
+               COMMAND MANAGERS
+            </span>
+            <span id="managersSelected"></span>
+            <span id="managersArrow"></span>
+            </a>
+            <ul class="sub-menu">
+              <li>
+                <a href="/docs/managers/cameraManager.html">
+                  CameraManager
+                </a>
+              </li>
+            </ul>
+          </li>
+
         </ul>
         <!-- END SIDEBAR MENU -->
       </div>
