hosted admin -> web admin

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -48,7 +48,7 @@ Purchase: http://themeforest.net/item/metronic-responsive-admin-dashboard-templa
         <a href="/">About</a>
       </li>
       <li id="guidesNavbar">
-        <a href="/guides/start/setup.html">Getting Started</a>
+      <a href="/guides/start/setup.html">Getting Started</a>
       </li>
       <li id="docsNavbar">
         <a href="/docs/nitrogen/index.html">Documentation</a>
@@ -109,7 +109,7 @@ Purchase: http://themeforest.net/item/metronic-responsive-admin-dashboard-templa
     <div class="hor-menu pull-right">
     <ul class="nav navbar-nav">
       <li>
-        <a href="https://admin.nitrogen.io/">Hosted Admin</a>
+        <a href="https://admin.nitrogen.io/">Web Admin</a>
       </li>
     </ul>
   </div>
