--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -57,7 +57,7 @@ Purchase: http://themeforest.net/item/metronic-responsive-admin-dashboard-templa
         <a data-toggle="dropdown" data-hover="dropdown" data-close-others="true" class="dropdown-toggle" href="javascript:;">
           <span class="selected">
           </span>
-           Source Repos <i class="fa fa-angle-down"></i>
+           Source <i class="fa fa-angle-down"></i>
         </a>
         <ul class="dropdown-menu">
           <li>
