add stub app as example of Nitrogen application

--- a/source/layouts/docs.erb
+++ b/source/layouts/docs.erb
@@ -58,6 +58,11 @@
                   Commands
                 </a>
               </li>
+              <li>
+                <a href="/docs/concepts/reactor.html">
+                  Reactor
+                </a>
+              </li>
             </ul>
           </li>
           <li id='clientLibraryTree'>
