add hardware device guide

--- a/source/layouts/guides.erb
+++ b/source/layouts/guides.erb
@@ -27,7 +27,7 @@
             <i class="fa fa-lightbulb-o"></i>
 
             <span class="title">
-               GETTING STARTED
+               FIRST STEPS
             </span>
             <span id="startSelected"></span>
             <span id="startArrow"></span>
@@ -35,26 +35,42 @@
             <ul class="sub-menu">
               <li>
                 <a href="/guides/start/setup.html">
-                  Quick Setup
+                  Setup
                 </a>
               </li>
               <li>
                 <a href="/guides/start/camera.html">
-                  Camera Device
+                  Webcam Device
                 </a>
               </li>
               <li>
                 <a href="/guides/start/admin.html">
-                  Admin Tool
+                  Web Admin
                 </a>
               </li>
-              <!--
+            </ul>
+          </li>
+          <li id="deviceTree">
+            <a href="javascript:;">
+            <i class="fa fa-lightbulb-o"></i>
+
+            <span class="title">
+                HARDWARE DEVICE
+            </span>
+            <span id="deviceSelected"></span>
+            <span id="deviceArrow"></span>
+            </a>
+            <ul class="sub-menu">
               <li>
-                <a href="/guides/start/apps.html">
-                  Applications
+                <a href="/guides/device/setup.html">
+                  Setup
                 </a>
               </li>
-              -->
+              <li>
+                <a href="/guides/device/camera.html">
+                  Camera Device
+                </a>
+              </li>
             </ul>
           </li>
         <!-- END SIDEBAR MENU -->
