proofreading tweaks to first steps guide

--- a/source/layouts/guides.erb
+++ b/source/layouts/guides.erb
@@ -73,6 +73,29 @@
               </li>
             </ul>
           </li>
+          <li id="appsTree">
+            <a href="javascript:;">
+            <i class="fa fa-lightbulb-o"></i>
+
+            <span class="title">
+                APPLICATIONS
+            </span>
+            <span id="appsSelected"></span>
+            <span id="appsArrow"></span>
+            </a>
+            <ul class="sub-menu">
+              <li>
+                <a href="/guides/device/setup.html">
+                  Setup
+                </a>
+              </li>
+              <li>
+                <a href="/guides/device/camera.html">
+                  Camera Device
+                </a>
+              </li>
+            </ul>
+          </li>
         <!-- END SIDEBAR MENU -->
       </div>
     </div>
