tweaks to website text, start in on apps guide

--- a/source/layouts/guides.erb
+++ b/source/layouts/guides.erb
@@ -85,13 +85,18 @@
             </a>
             <ul class="sub-menu">
               <li>
-                <a href="/guides/device/setup.html">
-                  Setup
+                <a href="/guides/apps/reactor.html">
+                  Reactor
                 </a>
               </li>
               <li>
-                <a href="/guides/device/camera.html">
-                  Camera Device
+                <a href="/guides/apps/camera.html">
+                  Camera Device Application
+                </a>
+              </li>
+              <li>
+                <a href="/guides/apps/twitter.html">
+                  Twitter Light Application
                 </a>
               </li>
             </ul>
