add timelapse application guide

--- a/source/layouts/guides.erb
+++ b/source/layouts/guides.erb
@@ -90,13 +90,8 @@
                 </a>
               </li>
               <li>
-                <a href="/guides/apps/camera.html">
-                  Camera Device Application
-                </a>
-              </li>
-              <li>
-                <a href="/guides/apps/twitter.html">
-                  Twitter Light Application
+                <a href="/guides/apps/timelapse.html">
+                  Timelapse Application
                 </a>
               </li>
             </ul>
