--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- 
+<!--
 Template Name: Metronic - Responsive Admin Dashboard Template build with Twitter Bootstrap 3.0.3
 Version: 1.5.5
 Author: KeenThemes
@@ -134,7 +134,7 @@ Purchase: http://themeforest.net/item/metronic-responsive-admin-dashboard-templa
         <div class="row">
           <div class="col-md-12">
             <h3 class="page-title">
-              
+
             </h3>
           </div>
         </div>
@@ -171,7 +171,7 @@ Purchase: http://themeforest.net/item/metronic-responsive-admin-dashboard-templa
 <%= javascript_include_tag  "all" %>
 
 <script>
-  $(document).ready(function() {    
+  $(document).ready(function() {
     App.init();
 
     console.log(window.location.pathname.substring(0, 13));
@@ -198,7 +198,7 @@ Purchase: http://themeforest.net/item/metronic-responsive-admin-dashboard-templa
             $('#managersTree').addClass('active');
             $('#managersSelected').addClass('selected');
             $('#managersArrow').addClass('arrow').addClass('open');
-        } 
+        }
     } else if (window.location.pathname.substring(0, 7) === '/guides') {
         $('#guidesNavbar').addClass('active');
         if (window.location.pathname.substring(0, 13) === '/guides/start') {
@@ -209,8 +209,12 @@ Purchase: http://themeforest.net/item/metronic-responsive-admin-dashboard-templa
             $('#deviceTree').addClass('active');
             $('#deviceSelected').addClass('selected');
             $('#deviceArrow').addClass('arrow').addClass('open');
+        } else if (window.location.pathname.substring(0, 12) === '/guides/apps') {
+            $('#appsTree').addClass('active');
+            $('#appsSelected').addClass('selected');
+            $('#appsArrow').addClass('arrow').addClass('open');
         }
-    } else { 
+    } else {
         $('#aboutNavbar').addClass('active');
         $('#page-content-div').addClass('vanish-sidebar');
     }
