--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -224,8 +224,20 @@ Purchase: http://themeforest.net/item/metronic-responsive-admin-dashboard-templa
         window.location = 'https://www.google.com/#q=site:nitrogen.io+' + encodeURIComponent(query);
 
         event.preventDefault();
-     });
-  });
+    });
+
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-49850580-1', 'nitrogen.io');
+        ga('send', 'pageview');
+    });
+</script>
+
+<script>
+
 </script>
 
 </body>
