add concept overview page

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -32,7 +32,7 @@ Purchase: http://themeforest.net/item/metronic-responsive-admin-dashboard-templa
   <!-- BEGIN TOP NAVIGATION BAR -->
   <div class="header-inner container">
     <!-- BEGIN LOGO -->
-    <a class="navbar-brand" href="index.html" style="color:#236AB4">
+    <a class="navbar-brand" href="/index.html" style="color:#236AB4">
        nitrogen
     </a>
     <!-- END LOGO -->
