--- a/source/layouts/docs.erb
+++ b/source/layouts/docs.erb
@@ -34,6 +34,11 @@
             </a>
             <ul class="sub-menu">
               <li>
+                <a href="/docs/concepts/overview.html">
+                  Overview
+                </a>
+              </li>
+              <li>
                 <a href="/docs/concepts/messages.html">
                   Messages
                 </a>
