--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -51,7 +51,7 @@ Purchase: http://themeforest.net/item/metronic-responsive-admin-dashboard-templa
       <a href="/guides/start/setup.html">Guides</a>
       </li>
       <li id="docsNavbar">
-        <a href="/docs/nitrogen/index.html">Documentation</a>
+        <a href="/docs/concepts/overview.html">Documentation</a>
       </li>
       <li>
         <a data-toggle="dropdown" data-hover="dropdown" data-close-others="true" class="dropdown-toggle" href="javascript:;">
