top to bottom review of docs text

--- a/source/layouts/docs.erb
+++ b/source/layouts/docs.erb
@@ -164,6 +164,26 @@
                   log
                 </a>
               </li>
+              <li>
+                <a href="/docs/schemas/pressure.html">
+                  pressure
+                </a>
+              </li>
+              <li>
+                <a href="/docs/schemas/switchCommand.html">
+                  switchCommand
+                </a>
+              </li>
+              <li>
+                <a href="/docs/schemas/reactorCommand.html">
+                  reactorCommand
+                </a>
+              </li>
+              <li>
+                <a href="/docs/schemas/temperature.html">
+                  temperature
+                </a>
+              </li>
             </ul>
           </li>
 
