--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -65,19 +65,10 @@ Purchase: http://themeforest.net/item/metronic-responsive-admin-dashboard-templa
               Service
             </a>
           </li>
+
           <li>
             <a href="http://github.com/nitrogenjs/client">
               Client Module
-            </a>
-          </li>
-          <li>
-            <a href="http://github.com/nitrogenjs/admin">
-              Service Admin Tool
-            </a>
-          </li>
-          <li>
-            <a href="http://github.com/nitrogenjs/cli">
-              Command Line Interface
             </a>
           </li>
 
@@ -94,8 +85,26 @@ Purchase: http://themeforest.net/item/metronic-responsive-admin-dashboard-templa
           </li>
 
           <li>
+            <a href="http://github.com/nitrogenjs/cli">
+              Command Line Interface
+            </a>
+          </li>
+
+          <li>
+            <a href="http://github.com/nitrogenjs/admin">
+              Web Admin
+            </a>
+          </li>
+
+          <li>
             <a href="http://github.com/nitrogenjs/website">
               Project Website
+            </a>
+          </li>
+
+          <li>
+            <a href="http://github.com/nitrogenjs/reactor">
+              Reactor
             </a>
           </li>
 
