bring docs up to date with personalization.

--- a/source/layouts/guides.erb
+++ b/source/layouts/guides.erb
@@ -86,7 +86,7 @@
             <ul class="sub-menu">
               <li>
                 <a href="/guides/apps/reactor.html">
-                  Reactor
+                  Camera Application
                 </a>
               </li>
               <li>
