add Mosaic web app guide

--- a/source/layouts/guides.erb
+++ b/source/layouts/guides.erb
@@ -94,6 +94,11 @@
                   Timelapse Application
                 </a>
               </li>
+              <li>
+                <a href="/guides/apps/web.html">
+                  Mosaic Web Application
+                </a>
+              </li>
             </ul>
           </li>
         <!-- END SIDEBAR MENU -->
