--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -61,8 +61,14 @@ Purchase: http://themeforest.net/item/metronic-responsive-admin-dashboard-templa
         </a>
         <ul class="dropdown-menu">
           <li>
-            <a href="http://github.com/nitrogenjs/service">
-              Service
+            <a href="http://github.com/nitrogenjs/apps">
+              Applications
+            </a>
+          </li>
+
+          <li>
+            <a href="http://github.com/nitrogenjs/cli">
+              Command Line Interface
             </a>
           </li>
 
@@ -85,18 +91,6 @@ Purchase: http://themeforest.net/item/metronic-responsive-admin-dashboard-templa
           </li>
 
           <li>
-            <a href="http://github.com/nitrogenjs/cli">
-              Command Line Interface
-            </a>
-          </li>
-
-          <li>
-            <a href="http://github.com/nitrogenjs/admin">
-              Web Admin
-            </a>
-          </li>
-
-          <li>
             <a href="http://github.com/nitrogenjs/website">
               Project Website
             </a>
@@ -108,6 +102,17 @@ Purchase: http://themeforest.net/item/metronic-responsive-admin-dashboard-templa
             </a>
           </li>
 
+          <li>
+            <a href="http://github.com/nitrogenjs/service">
+              Service
+            </a>
+          </li>
+
+          <li>
+            <a href="http://github.com/nitrogenjs/admin">
+              Web Admin
+            </a>
+          </li>
         </ul>
       </li>
       <li id="docsNavbar">
