add MQTT gateway link

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -91,6 +91,12 @@ Purchase: http://themeforest.net/item/metronic-responsive-admin-dashboard-templa
           </li>
 
           <li>
+            <a href="http://github.com/nitrogenjs/mqtt">
+              MQTT Gateway
+            </a>
+          </li>
+
+          <li>
             <a href="http://github.com/nitrogenjs/website">
               Project Website
             </a>
