added n2 documenation and a tools section to the navigation for it.

--- a/source/layouts/docs.erb
+++ b/source/layouts/docs.erb
@@ -224,6 +224,24 @@
               </li>
             </ul>
           </li>
+          <li id="toolssTree">
+            <a href="javascript:;">
+            <i class="fa fa-cogs"></i>
+
+            <span class="title">
+               Tools
+            </span>
+            <span id="toolsSelected"></span>
+            <span id="toolssArrow"></span>
+            </a>
+            <ul class="sub-menu">
+              <li>
+                <a href="/docs/tools/n2.html">
+                  n2 - command line tool
+                </a>
+              </li>
+            </ul>
+          </li>
 
         </ul>
         <!-- END SIDEBAR MENU -->
