small tweaks to command line tool PR

--- a/source/layouts/docs.erb
+++ b/source/layouts/docs.erb
@@ -224,12 +224,12 @@
               </li>
             </ul>
           </li>
-          <li id="toolssTree">
+          <li id="toolsTree">
             <a href="javascript:;">
             <i class="fa fa-cogs"></i>
 
             <span class="title">
-               Tools
+               TOOLS
             </span>
             <span id="toolsSelected"></span>
             <span id="toolssArrow"></span>
@@ -237,7 +237,7 @@
             <ul class="sub-menu">
               <li>
                 <a href="/docs/tools/n2.html">
-                  n2 - command line tool
+                  Command Line Interface
                 </a>
               </li>
             </ul>
