--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -218,6 +218,10 @@ Purchase: http://themeforest.net/item/metronic-responsive-admin-dashboard-templa
             $('#managersTree').addClass('active');
             $('#managersSelected').addClass('selected');
             $('#managersArrow').addClass('arrow').addClass('open');
+        } else if (window.location.pathname.substring(0, 11) === '/docs/tools') {
+            $('#toolsTree').addClass('active');
+            $('#toolsTree').addClass('selected');
+            $('#toolsTree').addClass('arrow').addClass('open');
         }
     } else if (window.location.pathname.substring(0, 7) === '/guides') {
         $('#guidesNavbar').addClass('active');
