added simpleLED.js (first device guide)

--- a/source/layouts/guides.erb
+++ b/source/layouts/guides.erb
@@ -39,6 +39,11 @@
                 </a>
               </li>
               <li>
+                <a href="/guides/start/simpleLED.html">
+                  First device
+                </a>
+              </li>
+              <li>
                 <a href="/guides/start/camera.html">
                   Webcam Device
                 </a>
