tweaks to First Device guide

--- a/source/layouts/guides.erb
+++ b/source/layouts/guides.erb
@@ -40,7 +40,7 @@
               </li>
               <li>
                 <a href="/guides/start/simpleLED.html">
-                  First device
+                  First Device
                 </a>
               </li>
               <li>
