documenting vagrant steps

--- a/source/layouts/docs.erb
+++ b/source/layouts/docs.erb
@@ -240,6 +240,11 @@
                   Command Line Interface
                 </a>
               </li>
+              <li>
+                <a href="/docs/tools/vagrant.html">
+                  Vagrant - Auto provision server VMs
+                </a>
+              </li>
             </ul>
           </li>
 
