add location schema

--- a/source/layouts/docs.erb
+++ b/source/layouts/docs.erb
@@ -160,6 +160,11 @@
                 </a>
               </li>
               <li>
+                <a href="/docs/schemas/location.html">
+                  location
+                </a>
+              </li>
+              <li>
                 <a href="/docs/schemas/log.html">
                   log
                 </a>
