initial checkin of the rewrite

--- a/source/layouts/guides.erb
+++ b/source/layouts/guides.erb
@@ -27,30 +27,20 @@
             <i class="fa fa-lightbulb-o"></i>
 
             <span class="title">
-               FIRST STEPS
+               Device Side Development
             </span>
             <span id="startSelected"></span>
             <span id="startArrow"></span>
             </a>
             <ul class="sub-menu">
               <li>
-                <a href="/guides/start/setup.html">
+                <a href="/guides/device/index.html">
+                  Overview
+                </a>
+              </li>
+              <li>
+                <a href="/guides/device/setup.html">
                   Setup
-                </a>
-              </li>
-              <li>
-                <a href="/guides/start/simpleLED.html">
-                  First Device
-                </a>
-              </li>
-              <li>
-                <a href="/guides/start/camera.html">
-                  Webcam Device
-                </a>
-              </li>
-              <li>
-                <a href="/guides/start/admin.html">
-                  Web Admin
                 </a>
               </li>
             </ul>
@@ -60,20 +50,15 @@
             <i class="fa fa-lightbulb-o"></i>
 
             <span class="title">
-                HARDWARE DEVICE
+                Server Side Development
             </span>
             <span id="deviceSelected"></span>
             <span id="deviceArrow"></span>
             </a>
             <ul class="sub-menu">
               <li>
-                <a href="/guides/device/setup.html">
-                  Setup
-                </a>
-              </li>
-              <li>
-                <a href="/guides/device/camera.html">
-                  Camera Device
+                <a href="/guides/serverside/index.html">
+                  Overview
                 </a>
               </li>
             </ul>
@@ -83,25 +68,30 @@
             <i class="fa fa-lightbulb-o"></i>
 
             <span class="title">
-                APPLICATIONS
+                Dev Ops
             </span>
             <span id="appsSelected"></span>
             <span id="appsArrow"></span>
             </a>
             <ul class="sub-menu">
               <li>
-                <a href="/guides/apps/reactor.html">
-                  Camera Application
+                <a href="/guides/devops/index.html">
+                  Overview
                 </a>
               </li>
               <li>
-                <a href="/guides/apps/timelapse.html">
-                  Timelapse Application
+                <a href="/guides/devops/manuallyrunserver.html">
+                  Manually Running Nitrogen
                 </a>
               </li>
               <li>
-                <a href="/guides/apps/web.html">
-                  Mosaic Web Application
+                <a href="/guides/devops/vagrant.html">
+                  Running Nitrogen with Vagrant
+                </a>
+              </li>
+              <li>
+                <a href="/guides/devops/docker.html">
+                  Running Nitrogen with Docker
                 </a>
               </li>
             </ul>
