first draft of new website frontpage

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -85,8 +85,26 @@ Purchase: http://themeforest.net/item/metronic-responsive-admin-dashboard-templa
           </li>
 
           <li>
+            <a href="http://github.com/nitrogenjs/consumption">
+              Consumption Server
+            </a>
+          </li>
+
+          <li>
             <a href="http://github.com/nitrogenjs/devices">
               Devices
+            </a>
+          </li>
+
+          <li>
+            <a href="http://github.com/nitrogenjs/registry">
+              Device Registry
+            </a>
+          </li>
+
+          <li>
+            <a href="http://github.com/nitrogenjs/ingestion">
+              Ingestion Server
             </a>
           </li>
 
@@ -103,22 +121,11 @@ Purchase: http://themeforest.net/item/metronic-responsive-admin-dashboard-templa
           </li>
 
           <li>
-            <a href="http://github.com/nitrogenjs/reactor">
-              Reactor
-            </a>
-          </li>
-
-          <li>
-            <a href="http://github.com/nitrogenjs/service">
-              Service
-            </a>
-          </li>
-
-          <li>
             <a href="http://github.com/nitrogenjs/admin">
               Web Admin
             </a>
           </li>
+
         </ul>
       </li>
       <li id="docsNavbar">
